--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^1.1.6 # Ellenőrizd a legfrissebb verziót
-  google_fonts: ^4.0.3 # Ellenőrizd a legfrissebb verziót
+  flutter_svg: ^2.0.17 # Ellenőrizd a legfrissebb verziót
+  google_fonts: ^6.2.1 # Ellenőrizd a legfrissebb verziót
+  flutter_native_splash: ^2.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  flutter_launcher_icons: ^0.9.2
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.3
+  change_app_package_name: ^1.5.0
 
 flutter_icons:
   android: true
@@ -35,3 +37,9 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
+
+flutter_native_splash:
+  color: "#EBFFEE"
+  image: assets/images/karcagapp_logo.png
+  android: true
+  ios: true
